--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "vite preview",
     "check": "tsc",
     "db:push": "drizzle-kit push",
-    "deploy": "npm run build && gh-pages -d dist"
+    "predeploy": "npm run build && touch dist/.nojekyll && cp -f dist/404.html dist/",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
