--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,47 @@
+# Dependencies
 node_modules
+.pnp
+.pnp.js
+
+# Build output
 dist
-.DS_Store
+build
+out
 server/public
+.next
+
+# OS files
+.DS_Store
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# Logs and debugging
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# IDE and editor files
+.idea
+.vscode
+*.swp
+*.swo
+*~
+.*.swp
 vite.config.ts.*
+
+# Misc
 *.tar.gz
+.cache
+.parcel-cache
 
 context.md
